crates/analyzer/tests/snapshots/errors__overflow_u8_pos.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: literal out of range for `u8`
  ┌─ [snippet]:3:6
  │
3 │   u8(256)
  │      ^^^ does not fit into type `u8`


